# traffic-sim

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
.github/: README.md
include/: Application.h  C_tlog.h  Car.h  Log.h  Tile.h  Tilemap.h  ctlog.h  log.h
other/: Tilemap.rmp
src/: Application.cpp  C_tlog.c  Car.cpp  Log.cpp  Tile.cpp  Tilemap.cpp  ctlog.c  log.cpp  main.cpp  t_log.c
tests/: README.md  cte.py  run.py  setup.sh  test.py
tests/log/: log_test.cpp  test.json
